# retro-httpaf-bench

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  build_benchmarks.sh  build_jupyter.sh  build_mimalloc.sh  build_wrk.sh  build_wrk2.sh  run_benchmarks.sh  run_benchmarks_mult.sh  setup_go.sh  setup_opams.sh
.github/workflows/: build_image.yml
cohttp-eio/: Dockerfile  cohttp_eio.ml  dune
cohttp-lwt-unix/: Dockerfile  cohttp_lwt_unix.ml  dune
http-async/: Dockerfile  dune  main.ml
httpaf-effects/: Dockerfile  dune  httpaf_effects.ml  wrk_effects_benchmark.ml
httpaf-eio/: Dockerfile  dune  wrk_effects_benchmark.ml
httpaf-lwt/: Dockerfile  dune  httpaf_lwt.ml
httpaf-shuttle-async/: Dockerfile  dune  httpaf_shuttle_async.ml  protocol.ml
nethttp-go/: Dockerfile  httpserv.go
notebook/: parse_output.ipynb
notebook/.ipynb_checkpoints/: parse_output-checkpoint.ipynb
rust-hyper/: Cargo.toml  Dockerfile
rust-hyper/src/: main.rs  server.rs
simple_httpd/: Dockerfile  dune  simple_httpd.ml
