[package]
name = "rust-hyper"
version = "0.1.0"
authors = ["Sadiq Jaffer <sadiq@toao.com>",
    "Steve Klabnik <steve@steveklabnik.com>",
    "Alexander Polyakov <plhk@sdf.org>",
    "Sean McArthur <sean@seanmonstar.com>"]
edition = "2018"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
codegen-units = 1
lto = true